Add background image to app

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,4 +2,6 @@
 
 html {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-image: url(./assets/background1.jpeg);
+  background-size: cover;
 }
